making categories to default function, need tjs code to complete categories

--- a/CalendarTest/CalendarTest.csproj
+++ b/CalendarTest/CalendarTest.csproj
@@ -26,5 +26,9 @@
   <ItemGroup>
     <ProjectReference Include="..\AppDevFirstProject\AppDevFirstProject.csproj" />
   </ItemGroup>
-
+	<ItemGroup>
+		<None Update="xunit.runner.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
