Implemented a few tests

--- a/PresenterTests/PresenterTests.csproj
+++ b/PresenterTests/PresenterTests.csproj
@@ -21,6 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="HomeCalendar">
+      <HintPath>..\Calendar\dlls\HomeCalendar.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
