--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -61,6 +61,7 @@ jobs:
       Test_Project_Path: PresenterTests\PresenterTests.csproj                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
       Wap_Project_Directory: WAPP    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
       Wap_Project_Path: WAPP\WAPP.wapproj                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
+      Test_DLL: PresenterTests\bin\${{ matrix.targetPlatform }}\${{ matrix.configuration }}\net6.0-windows\PresenterTests.dll
 
     steps:
     - name: Checkout
@@ -78,6 +79,14 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
+          # Added - Setup vstest
+    - name: Setup vstest
+      uses: darenm/Setup-VSTest@v1
+
+          # Added - Run unit tests
+    - name: Execute unit tests
+      run: vstest.console.exe $env:Test_DLL
+
     # # Execute all unit tests in the solution
     # - name: Execute unit tests
     #   run: dotnet test
@@ -94,21 +103,24 @@ jobs:
     - name: Decode the pfx
       run: |
         $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
-        $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath WAPP_TemporaryKey.pfx
+        $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath GitHubActionsWorkflow.pfx
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
 
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
-      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=WAPP_TemporaryKey.pfx /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
+      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
       env:
-        Appx_Bundle: Always
-        Appx_Bundle_Platforms: x86|x64
-        Appx_Package_Build_Mode: StoreUpload
-        Configuration: ${{ matrix.configuration }}
+        Appx_Bundle: Never
+        BuildMode: SideLoadOnly
+        Configuration: ${{ matrix.Configuration }}
+        TargetPlatform: ${{ matrix.targetplatform }}
+        # Appx_Bundle_Platforms: x86|x64
+        # Appx_Package_Build_Mode: StoreUpload
+        # Configuration: ${{ matrix.configuration }}
 
     # Remove the pfx
     - name: Remove the pfx
-      run: Remove-Item -path $env:Wap_Project_Directory\WAPP_TemporaryKey.pfx
+      run: Remove-Item -path $env:Wap_Project_Directory\GitHubActionsWorkflow.pfx
 
     # Upload the MSIX package: https://github.com/marketplace/actions/upload-a-build-artifact
     - name: Upload build artifacts
