--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -79,13 +79,13 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
-          # Added - Setup vstest
-    - name: Setup vstest
-      uses: darenm/Setup-VSTest@v1
+    #       # Added - Setup vstest
+    # - name: Setup vstest
+    #   uses: darenm/Setup-VSTest@v1
 
-          # Added - Run unit tests
-    - name: Execute unit tests
-      run: vstest.console.exe $env:Test_DLL
+    #       # Added - Run unit tests
+    # - name: Execute unit tests
+    #   run: vstest.console.exe $env:Test_DLL
 
     # # Execute all unit tests in the solution
     # - name: Execute unit tests
