--- a/Calendar/Calendar.csproj
+++ b/Calendar/Calendar.csproj
@@ -8,8 +8,8 @@
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x64;x86</Platforms>
     <ApplicationIcon>favicon.ico</ApplicationIcon>
+	 <RuntimeIdentifiers>win-x86</RuntimeIdentifiers>
   </PropertyGroup>
-
   <ItemGroup>
     <Content Include="favicon.ico" />
   </ItemGroup>
