--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -87,9 +87,9 @@ jobs:
     - name: Execute unit tests
       run: vstest.console.exe $env:Test_DLL
 
-    # # Execute all unit tests in the solution
-    # - name: Execute unit tests
-    #   run: dotnet test
+    # Execute all unit tests in the solution
+    - name: Execute unit tests
+      run: dotnet test
 
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
